<resources>
    <string name="app_name">Beer Brewery</string>
    <string name="base_url">asasa</string>
    <string name="weigh">Weigh</string>
    <string name="done">Done</string>
    <string name="malt">Malt</string>
    <string name="beer_desc">Beer Description</string>
    <string name="beer_abv">"Beer ABV "</string>
    <string name="other_details">Other Details</string>
    <string name="first_brewed">first brewed</string>
    <string name="contributed_by">Contributed By</string>
    <string name="beer_tips">Beer Tips</string>
    <string name="food_pairing">Food Pairing</string>
    <string name="beer_volume">Beer Volume</string>
    <string name="boil_volume">Boil Volume</string>
    <string name="beer_methods">Beer  Methods</string>
    <string name="beer_ingredient">Beer  Ingredients</string>
    <string name="hops">Hops</string>
    <string name="beer_name">Beer Name</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="zero">Zero</string>
    <string name="beer_list">Beer List</string>
    <string name="beer_details">Beer Details</string>
    <string name="beer_weigh">Beer Weigh</string>
</resources>